<?xml version="1.0"?>
<package format="3">
  <name>examples</name>
  <version>0.0.0</version>
  <description>The examples package</description>
  <maintainer email="jason@ufactory.cc">jason</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
