<?xml version="1.0"?>
<package format="3">
  <name>xarm_api</name>
  <version>0.0.0</version>
  <description>The xarm_api package</description>
  <maintainer email="waylon@todo.todo">waylon</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xarm_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
