<?xml version="1.0"?>
<package format="3">
  <name>xarm_controller</name>
  <version>0.0.0</version>
  <description>The xarm_controller package</description>
  <maintainer email="jason@ufactory.cc">jason</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  <depend>combined_robot_hw</depend>-->
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>hardware_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>xarm_api</depend>

  <export>
      <build_type>ament_cmake</build_type>
      <hardware_interface plugin="${prefix}/xarm_hw_plugin.xml"/>
  </export>
</package>
