<?xml version="1.0"?>
<package format="2">
  <name>xarm_gazebo</name>
  <version>0.0.0</version>
  <description>The xarm_gazebo package</description>
  <maintainer email="jimy@todo.todo">jimy</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xarm_description</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
