<package>
  <name>xarm_gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xarm_gripper</p>
    <p>This package contains configuration data, 3D models and launch files for xarm_gripper robot</p>
  </description>
  <author>jason_peng</author>
  <maintainer email="jason@ufactory.cc" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <export>
      <build_type>ament_cmake</build_type>
      <architecture_independent />
    </export>

</package>